@@ -91,6 +91,8 @@ unity (6.4.0-0ubuntu1) UNRELEASED; urgency=low
   * Cherry-pick fixes from upstream:
     - Launcher: make always possible to drag an icon to the bottom or top 
       of its sublist (LP: #1043968)
+    - LauncherController: make the controller enable the launcher struts, 
+      based on hide-mode option. (LP: #1044005)
 
  -- Łukasz 'sil2100' Zemczak <lukasz.zemczak@canonical.com>  Thu, 30 Aug 2012 15:07:23 +0200
 
